--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "broccoli-concat": "^2.0.4",
     "broccoli-config-loader": "^1.0.0",
     "broccoli-config-replace": "^1.1.2",
-    "broccoli-funnel": "^1.0.0",
+    "broccoli-funnel": "broccolijs/broccoli-funnel#ce16c44",
     "broccoli-funnel-reducer": "^1.0.0",
-    "broccoli-merge-trees": "^1.0.0",
+    "broccoli-merge-trees": "^1.1.1",
     "broccoli-sane-watcher": "^1.1.1",
     "broccoli-source": "^1.1.0",
     "broccoli-viz": "^2.0.1",
