--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "broccoli-merge-trees": "^1.0.0",
     "broccoli-sane-watcher": "^1.1.1",
     "broccoli-source": "^1.1.0",
+    "broccoli-stew": "^1.2.0",
     "broccoli-viz": "^2.0.1",
     "chalk": "^1.1.3",
     "clean-base-url": "^1.0.0",
